# django-cache-cleaner

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/: FUNDING.yml
.github/workflows/: create-release.yml  pre-commit-autoupdate.yml  test-package.yml
cache_cleaner/: admin.py  apps.py  metadata.py  models.py
cache_cleaner/locale/en/LC_MESSAGES/: django.mo  django.po
cache_cleaner/locale/it/LC_MESSAGES/: django.mo  django.po
cache_cleaner/management/commands/: clear_cache.py
cache_cleaner/migrations/: 0001_initial.py
tests/: settings.py  test_admin.py  test_commands_clear_cache.py  test_metadata.py  test_models.py  urls.py
